--- a/Deeltoets 1/css/style.css
+++ b/Deeltoets 1/css/style.css
@@ -1,17 +1,24 @@
-﻿body{
+﻿* {
+	padding: 0;
+	margin: 0;
+}
+
+body{
 	background-color: #efefef;
 	font-family: Helvetica, Verdana, sans-serif; 
     font-weight: normal; 
     font-size: 120%;
     line-height: 140%;
-
+    padding: 1em;
 }
 body > header{
-	background-color: rgba(100, 200, 100, 0.4);
+	background-color: #00a8ff;
 	text-align: center;
+	padding: 1em;
 }
 body > header h1{
-	font-size: 100%
+	font-size: 100%;
+	color: #fff;
 }
 body > header h1 span{
 	font-size: 80%
@@ -20,8 +27,8 @@ body > header h1 span{
 /* Menu */
 nav{
 	background:#fff;
-	margin-top: -1em;
-	font-size: 80%
+	margin: 1em 0;
+	font-size: 100%
 }
 nav ol{
 	margin: 0;
@@ -31,28 +38,45 @@ nav ol li{
 	display: inline-block;
 	margin: 0 1em;
 }
-nav ol li a:hover{
-	background-color: rgba(100, 200, 100, 0.4);
+
+nav ol li a {
+	color: #000;
+	text-decoration: none;
+	display: block;
+	padding: 0.5em 1em;
+}
+nav ol li a.active{
+	color: #fff;
+	background-color: #00a8ff;
 }
 
 /* Table */
 table{
-	width: 80%;
-	background-color: rgba(100, 200, 100, 0.2);
+	width: 100%;
 	margin-bottom: 1em;
 }
 tr{
-	text-align: center;
+	text-align: left;
+	background-color: #eee;
 }
 tr:nth-child(even){
-	background-color: rgba(100, 200, 100, 0.2);
+	background-color: #ddd;
+}
+td{
+	width: auto;
+}
+
+th{
+	background-color: #bbb;
+}
+thead { 
+	margin-bottom: 20px;
 }
 .winner:after{
 	content: "*"; 
 	color: red;
 	font-size: 180%;
 }
-
 
 /* Test data*/
 pre, pre header{
@@ -61,4 +85,23 @@ pre, pre header{
 	background-color: rgba(0, 0, 0, 0.1);
 	font-size: 80%;
 	line-height: 100%;
+}
+
+article > section {
+	display: none;
+}
+article > section.active {
+	display: block;
+}
+@media screen and (max-width: 620px){
+    nav ol li{
+		display: block;
+		margin:0;
+	}
+	nav ol li a{
+		width: 100%;
+		display:block;
+		margin:0;
+		padding: 0;
+	}
 }
