--- a/Deeltoets 1/css/style.css
+++ b/Deeltoets 1/css/style.css
@@ -9,18 +9,18 @@ body{
     font-weight: normal; 
     font-size: 120%;
     line-height: 140%;
-    padding: 1em;
+    height: 100%;
 }
-body > header{
+header{
 	background-color: #00a8ff;
 	text-align: center;
 	padding: 1em;
 }
-body > header h1{
+header h1{
 	font-size: 100%;
 	color: #fff;
 }
-body > header h1 span{
+header h1 span{
 	font-size: 80%
 }
 
@@ -80,9 +80,86 @@ thead {
 article > section {
 	display: none;
 }
+
 article > section.active {
 	display: block;
 }
+
+section > article {
+    float: left;
+    clear: both;
+    width: 90%;
+    padding: 0 5%;
+    min-height: 15%;
+    background: #ddd;
+    margin-bottom: 1em;
+    border: 1px solid #aaa;
+}
+
+section > article > a {
+    display: block;
+    width: 100%;
+    float: left;
+    padding: 0.4em 0 2em;
+    color: #000;
+}
+
+section > article > a >  h2, h3 {
+	float: left;
+    margin: 0 5%;
+    width: 15%;
+    text-align: center;
+}
+
+section > article > a > h2 {
+    margin: 0 3%;
+    width: 29%;
+}
+section > article > a > h3 {
+    margin: 0 5%;
+    width: 5%;
+}
+
+section > article > a > h4 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0.5em;
+}
+section > article > a > h2:first-of-type {
+    clear: both;
+    text-align: right;
+}
+
+section > article > a > h2:nth-of-type(2) {
+    text-align: left;
+}
+
+ input[type="text"] {
+ 	margin: 0 auto;
+	float: none;
+	font-size: 2em;
+	width: 100px;
+	height: 100px;
+	text-align: center;
+}
+
+form > section {
+	width: auto;
+	float: left;
+	margin: 0 5%;
+}
+
+form > section:last-of-type {
+	clear: both;
+	margin: 0 auto;
+}
+
+form > section > p {
+	width: 100x;
+	text-align: center;
+	background: #F00;
+}
+
 @media screen and (max-width: 620px){
     nav ol li{
 		display: block;
@@ -94,4 +171,328 @@ article > section.active {
 		margin:0;
 		padding: 0.5em 0;
 	}
+
+    section > article > a > h2, h3, h4 {
+        font-size: 0.7em;
+    }
+}
+
+/* Loader */
+
+#floatingBarsG {
+    position:fixed;
+    width:66px;
+    height:82px;
+    margin-left: 45%;
+    margin-top: -110px;
+    display:block;
+}
+
+.blockG { 
+position:absolute;
+background-color:#FFFFFF;
+width:11px;
+height:26px;
+-moz-border-radius:9px 9px 0 0;
+-moz-transform:scale(0.4);
+-moz-animation-name:fadeG;
+-moz-animation-duration:0.96s;
+-moz-animation-iteration-count:infinite;
+-moz-animation-direction:linear;
+-webkit-border-radius:9px 9px 0 0;
+-webkit-transform:scale(0.4);
+-webkit-animation-name:fadeG;
+-webkit-animation-duration:0.96s;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:linear;
+-ms-border-radius:9px 9px 0 0;
+-ms-transform:scale(0.4);
+-ms-animation-name:fadeG;
+-ms-animation-duration:0.96s;
+-ms-animation-iteration-count:infinite;
+-ms-animation-direction:linear;
+-o-border-radius:9px 9px 0 0;
+-o-transform:scale(0.4);
+-o-animation-name:fadeG;
+-o-animation-duration:0.96s;
+-o-animation-iteration-count:infinite;
+-o-animation-direction:linear;
+border-radius:9px 9px 0 0;
+transform:scale(0.4);
+animation-name:fadeG;
+animation-duration:0.96s;
+animation-iteration-count:infinite;
+animation-direction:linear;
+}
+
+#rotateG_01{
+left:0;
+top:30px;
+-moz-animation-delay:0.36s;
+-moz-transform:rotate(-90deg);
+-webkit-animation-delay:0.36s;
+-webkit-transform:rotate(-90deg);
+-ms-animation-delay:0.36s;
+-ms-transform:rotate(-90deg);
+-o-animation-delay:0.36s;
+-o-transform:rotate(-90deg);
+animation-delay:0.36s;
+transform:rotate(-90deg);
+}
+
+#rotateG_02{
+left:9px;
+top:11px;
+-moz-animation-delay:0.48s;
+-moz-transform:rotate(-45deg);
+-webkit-animation-delay:0.48s;
+-webkit-transform:rotate(-45deg);
+-ms-animation-delay:0.48s;
+-ms-transform:rotate(-45deg);
+-o-animation-delay:0.48s;
+-o-transform:rotate(-45deg);
+animation-delay:0.48s;
+transform:rotate(-45deg);
+}
+
+#rotateG_03{
+left:28px;
+top:3px;
+-moz-animation-delay:0.6s;
+-moz-transform:rotate(0deg);
+-webkit-animation-delay:0.6s;
+-webkit-transform:rotate(0deg);
+-ms-animation-delay:0.6s;
+-ms-transform:rotate(0deg);
+-o-animation-delay:0.6s;
+-o-transform:rotate(0deg);
+animation-delay:0.6s;
+transform:rotate(0deg);
+}
+
+#rotateG_04{
+right:9px;
+top:11px;
+-moz-animation-delay:0.72s;
+-moz-transform:rotate(45deg);
+-webkit-animation-delay:0.72s;
+-webkit-transform:rotate(45deg);
+-ms-animation-delay:0.72s;
+-ms-transform:rotate(45deg);
+-o-animation-delay:0.72s;
+-o-transform:rotate(45deg);
+animation-delay:0.72s;
+transform:rotate(45deg);
+}
+
+#rotateG_05{
+right:0;
+top:30px;
+-moz-animation-delay:0.8400000000000001s;
+-moz-transform:rotate(90deg);
+-webkit-animation-delay:0.8400000000000001s;
+-webkit-transform:rotate(90deg);
+-ms-animation-delay:0.8400000000000001s;
+-ms-transform:rotate(90deg);
+-o-animation-delay:0.8400000000000001s;
+-o-transform:rotate(90deg);
+animation-delay:0.8400000000000001s;
+transform:rotate(90deg);
+}
+
+#rotateG_06{
+right:9px;
+bottom:7px;
+-moz-animation-delay:0.96s;
+-moz-transform:rotate(135deg);
+-webkit-animation-delay:0.96s;
+-webkit-transform:rotate(135deg);
+-ms-animation-delay:0.96s;
+-ms-transform:rotate(135deg);
+-o-animation-delay:0.96s;
+-o-transform:rotate(135deg);
+animation-delay:0.96s;
+transform:rotate(135deg);
+}
+
+#rotateG_07{
+bottom:0;
+left:28px;
+-moz-animation-delay:1.0799999999999998s;
+-moz-transform:rotate(180deg);
+-webkit-animation-delay:1.0799999999999998s;
+-webkit-transform:rotate(180deg);
+-ms-animation-delay:1.0799999999999998s;
+-ms-transform:rotate(180deg);
+-o-animation-delay:1.0799999999999998s;
+-o-transform:rotate(180deg);
+animation-delay:1.0799999999999998s;
+transform:rotate(180deg);
+}
+
+#rotateG_08{
+left:9px;
+bottom:7px;
+-moz-animation-delay:1.2s;
+-moz-transform:rotate(-135deg);
+-webkit-animation-delay:1.2s;
+-webkit-transform:rotate(-135deg);
+-ms-animation-delay:1.2s;
+-ms-transform:rotate(-135deg);
+-o-animation-delay:1.2s;
+-o-transform:rotate(-135deg);
+animation-delay:1.2s;
+transform:rotate(-135deg);
+}
+
+@-moz-keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
+
+@-webkit-keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
+
+@-ms-keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
+
+@-o-keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
+
+@keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
+
+   /* pull down is a translate3d y position */
+#container {
+    position: relative;
+    -webkit-transition: -webkit-transform 0ms;
+    transform: translate3d(0,0,0) scale3d(1,1,1);
+    -o-transform: translate3d(0,0,0) scale3d(1,1,1);
+    -ms-transform: translate3d(0,0,0) scale3d(1,1,1);
+    -moz-transform: translate3d(0,0,0) scale3d(1,1,1);
+    -webkit-transform: translate3d(0,0,0) scale3d(1,1,1);
+    -webkit-backface-visibility: hidden;
+}
+
+    /* slide up with small animation */
+#container.pullrefresh-slideup,
+#container.pullrefresh-loading {
+    -o-transition: -o-transform .3s;
+    -ms-transition: -ms-transform .3s;
+    -moz-transition: -moz-transform .3s;
+    -webkit-transition: -webkit-transform .3s;
+}
+
+    /* place the pullrefresh box above the container */
+#pullrefresh {
+    display: block;
+    overflow: hidden;
+    position: absolute;
+    top: -490px;
+    left: 0;
+    width: 100%;
+    height: 490px;
+    background: #ccc;
+    box-shadow: 0 -5px 10px #bbb inset;
+}
+
+#pullrefresh .message {
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+    right: 0;
+    color: #777;
+    text-align: center;
+    text-shadow: 1px 1px 0 #dfdfdf;
+    font-weight: bold;
+}
+
+    /* change message with css */
+#pullrefresh .message span:after { content: "Pull to refresh..."; }
+.pullrefresh-breakpoint #pullrefresh .message span:after { content: "Release to refresh..."; }
+.pullrefresh-loading #pullrefresh .message span:after { content: "Refreshing data..."; }
+
+
+    /* icon */
+#pullrefresh .icon {
+    position: absolute;
+    left: 20px;
+}
+
+    /* arrow icon */
+#pullrefresh .icon.arrow {
+    background: url(assets/img/arrow.png) no-repeat;
+    width: 71px;
+    height: 28px;
+    bottom: 10px;
+
+    transform: rotate(90deg);
+    transition: transform .3s;
+    -o-transform: rotate(90deg);
+    -o-transition: -o-transform .3s;
+    -ms-transform: rotate(90deg);
+    -ms-transition: -ms-transform .3s;
+    -moz-transform: rotate(90deg);
+    -moz-transition: -moz-transform .3s;
+    -webkit-transform: rotate(90deg);
+    -webkit-transition: -webkit-transform .3s;
+    -webkit-backface-visibility: hidden;
+}
+
+#pullrefresh .icon.arrow.arrow-up {
+    transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+}
+
+    /* spinner icon */
+    /* rotate spinner with css animation */
+@keyframes rotate{ 0%{ transform: rotate(0deg); } 100%{ transform: rotate(360deg); } }
+@-o-keyframes rotate{ 0%{ -o-transform: rotate(0deg); } 100%{ -o-transform: rotate(360deg); } }
+@-ms-keyframes rotate{ 0%{ -ms-transform: rotate(0deg); } 100%{ -ms-transform: rotate(360deg); } }
+@-moz-keyframes rotate{ 0%{ -moz-transform: rotate(0deg); } 100%{ -moz-transform: rotate(360deg); } }
+@-webkit-keyframes rotate{ 0%{ -webkit-transform: rotate(0deg); } 100%{ -webkit-transform: rotate(360deg); } }
+
+#pullrefresh .icon.loading {
+    background: url(assets/img/spinner.png) no-repeat;
+    width: 19px;
+    height: 19px;
+    background-size: 100%;
+    bottom: 0;
+
+    animation: rotate 1s linear infinite;
+    -o-animation: rotate 1s linear infinite;
+    -ms-animation: rotate 1s linear infinite;
+    -moz-animation: rotate 1s linear infinite;
+    -webkit-animation: rotate 1s linear infinite;
 }
